--- a/Dane_dla_schroniska.ipynb
+++ b/Dane_dla_schroniska.ipynb
@@ -3560,7 +3560,7 @@
     "mydb = mysql.connector.connect(\n",
     "  host=\"localhost\",\n",
     "  user=\"root\",\n",
-    "  passwd=\"Cart2polfunc\",\n",
+    "  passwd=\"pasw\",\n",
     "  database = \"Schronisko\"\n",
     ")\n",
     "\n",
